# Diarect

./: README.md  main.py  pyproject.toml  speechrec.py
templates/: index.html
